<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4sp"
        app:cardElevation="6sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:padding="20dp"
        >
        <LinearLayout
            android:id="@+id/linearLayoutInner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10sp"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp"
                android:gravity="start"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name2"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"
                    android:textAllCaps="true"

                    />

                <TextView
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:id="@+id/lblName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name3"
                    android:textColor="@color/bluebarry"
                    android:layout_marginLeft="10dp"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="left"
                android:padding="5dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/id"
                    android:textSize="20dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    android:textAllCaps="true"/>

                <TextView
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:id="@+id/lblId"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/bluebarry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/id2"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="left"
                android:padding="5dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"
                    android:textSize="20dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    android:textAllCaps="true"/>

                <TextView
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/bluebarry"
                    android:id="@+id/lblPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone2"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="start"
                android:padding="5dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone3"
                    android:textSize="20dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    android:textAllCaps="true"/>

                <TextView
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:id="@+id/lblPhone2"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/bluebarry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone4"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="start"
                android:padding="5dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nameName"
                    android:textSize="20dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    android:textAllCaps="true"/>

                <TextView
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:id="@+id/lblCity"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/bluebarry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="City"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="start"
                android:padding="5dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Address: "
                    android:textSize="20dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    android:textAllCaps="true"/>

                <TextView
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:id="@+id/lblAddress"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/bluebarry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Address"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="start"
                android:padding="5dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/device"
                    android:textSize="20dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    android:textAllCaps="true"/>

                <TextView
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:id="@+id/lblDevice"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/bluebarry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/device2"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="start"
                android:padding="5dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/age"
                    android:textSize="20dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    android:textAllCaps="true"/>

                <TextView
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:id="@+id/lblAge"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/bluebarry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/age2"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="start"
                android:padding="5dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textSize="20dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    android:textAllCaps="true"/>

                <TextView
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:id="@+id/lblDate"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/bluebarry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date2"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="start"
                android:padding="5dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notes2"
                    android:textSize="20dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    android:textAllCaps="true"/>

                <TextView
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:id="@+id/lblNotes"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/bluebarry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notes"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="start"
                android:padding="5dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    android:textSize="20dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    android:textAllCaps="true"/>

                <TextView
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:id="@+id/lblPrice"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/bluebarry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price2"
                    />

            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>