<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:padding="15sp"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:id="@+id/txtaddusername"
        android:hint="@string/enter_username1"
        android:textColor="@color/green"
        android:backgroundTint="@color/green"
        android:layout_marginLeft="10dp"
        android:drawableLeft="@drawable/ic_action_user"
        android:layout_marginRight="10dp"
        android:drawablePadding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:inputType="textEmailAddress"
        android:layout_marginLeft="10dp"
        android:backgroundTint="@color/green"
        android:textColor="@color/green"
        android:layout_marginRight="10dp"
        android:drawableLeft="@drawable/ic_action_email"
        android:drawablePadding="10dp"


        android:padding="15sp"
        android:textSize="20sp"
        android:id="@+id/txtaddemail"
        android:hint="@string/enter_email_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_marginLeft="10dp"
        android:textColor="@color/green"
        android:layout_marginRight="10dp"
        android:inputType="textPassword"
        android:padding="15sp"
        android:drawableLeft="@drawable/ic_action_pass"
        android:drawablePadding="10dp"
        android:textSize="20sp"
        android:id="@+id/txtaddpass"
        android:backgroundTint="@color/green"
        android:hint="@string/enter_password1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btnaddlogin"
        android:text="@string/add_user"
        android:textColor="@color/bluebarry"
        android:textSize="22dp"
        android:textStyle="bold"
        android:background="@color/colorWhite"
        android:shadowColor="@color/gray"
        android:layout_marginTop="18dp"
        android:padding="10dp"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>